--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-modal": "^3.16.1",
     "react-router-dom": "^6.11.2",
     "react-scripts": "^5.0.1",
+    "react-select": "^5.7.3",
     "react-to-print": "^2.14.13",
     "react-toastify": "^9.1.3",
     "web-vitals": "^2.1.4"
