--- a/package.json
+++ b/package.json
@@ -51,7 +51,7 @@
     ]
   },
   "devDependencies": {
-    "tailwindcss": "^3.3.2",
-    "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "tailwindcss": "^3.3.2"
   }
 }
